[AE-1495] Refactor all test case to support multiple Spark version